--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nora-test",
   "private": true,
   "version": "0.0.0",
+  "homepage": "http://osocaramelosofer.github.io/nora-test",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
